--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <div class="container">       
           <div class="row">
               <div class="col-sm-12 col-md-6 col-lg-4">
-                  <img class="img-responsive img-header" src="/self.jpg" alt="">
+                  <img class="img-responsive img-header" src="self.jpg" alt="">
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-8">
                    <p>
