--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
           <div class="collapse navbar-collapse" id="top-navbar">
             <ul class="nav navbar-nav navbar-right">
 
-              <li><a href="#aboutMe">O mnie</a></li>
-              <li><a href="#work">Doświadczenie</a></li>
-              <li><a href="#school">Wykształcenie</a></li>
-              <li><a href="#skills">Umiejętności</a></li>
-              <li><a href="#projects">Projekty</a></li>
-              <li><a href="#contact">Kontakt</a></li>
+              <li><a href="#aboutMe">O MNIE</a></li>
+              <li><a href="#work">DOŚWIADCZENIE</a></li>
+              <li><a href="#school">WYKSZTAŁCENIE</a></li>
+              <li><a href="#skills">UMIEJĘTNOŚI</a></li>
+              <li><a href="#projects">PROJEKTY</a></li>
+              <li><a href="#contact">KONTAKT</a></li>
             </ul>
           </div>
         </div>
@@ -47,16 +47,16 @@
     </header>
     <section id="aboutMe" class="section">
       <div class="container">       
-          <div class="row">
+          <div class="row about-card">
               <div class="col-sm-12 col-md-6 col-lg-4">
                   <img class="img-responsive img-header" src="self.jpg" alt="">
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-8">
                    <p>
-                     Jestem studentem Państwowej Wyższej Szkoły Zawodowej w Oświęcimiu  na kierunku Informatyka. Interesuję się programowaniem, a swoją naukę zacząłem od języka C/C++ jednak  aktualnie skupiam się na poszerzaniu swoich umiejętności w języku Java, w którym zrealizowałem projekt systemu zarządzania zasobami ludzkimi w dwóch wersjach – przy użyciu serwletów oraz frameworku Spring(+Hibernate). Staram się również rozwijać w technologiach webowych (HTML, CSS, JS - React). Interesuję się także od niedawna projektowaniem aplikacji mobilnych Android. Posiadam również doświadczenie w pracy z takimi narzędziami, jak GIT, Maven oraz zajmowałem się projektowaniem relacyjnych baz danych (Oracle). 
+                    JESTEM STUDENTEM PAŃSTWOWEJ WYŻSZEJ SZKOŁY ZAWODOWEJ W OŚWIĘCIMIU  NA KIERUNKU INFORMATYKA. INTERESUJĘ SIĘ PROGRAMOWANIEM, A SWOJĄ NAUKĘ ZACZĄŁEM OD JĘZYKA C/C++ JEDNAK  AKTUALNIE SKUPIAM SIĘ NA POSZERZANIU SWOICH UMIEJĘTNOŚCI W JĘZYKU JAVA, W KTÓRYM ZREALIZOWAŁEM PROJEKT SYSTEMU ZARZĄDZANIA ZASOBAMI LUDZKIMI W DWÓCH WERSJACH – PRZY UŻYCIU SERWLETÓW ORAZ FRAMEWORKU SPRING(+HIBERNATE). STARAM SIĘ RÓWNIEŻ ROZWIJAĆ W TECHNOLOGIACH WEBOWYCH (HTML, CSS, JS - REACT). INTERESUJĘ SIĘ TAKŻE OD NIEDAWNA PROJEKTOWANIEM APLIKACJI MOBILNYCH ANDROID. POSIADAM RÓWNIEŻ DOŚWIADCZENIE W PRACY Z TAKIMI NARZĘDZIAMI, JAK GIT, MAVEN ORAZ ZAJMOWAŁEM SIĘ PROJEKTOWANIEM RELACYJNYCH BAZ DANYCH (ORACLE). 
                   </p>
                   <p>
-                      Jestem osobą dążącą do nieustannego poszerzania swojej wiedzy, dlatego nie zamykam się na żadne technologie i stanowiska, co w obszarze szybko zmieniających się narzędzi informatycznych i bardzo konkurencyjnego otoczenia biznesowego ma duże znaczenie. Ponadto dobrze odnajduję się w zespole i lubię prace nad złożonymi projektami .
+                    JESTEM OSOBĄ DĄŻĄCĄ DO NIEUSTANNEGO POSZERZANIA SWOJEJ WIEDZY, DLATEGO NIE ZAMYKAM SIĘ NA ŻADNE TECHNOLOGIE I STANOWISKA, CO W OBSZARZE SZYBKO ZMIENIAJĄCYCH SIĘ NARZĘDZI INFORMATYCZNYCH I BARDZO KONKURENCYJNEGO OTOCZENIA BIZNESOWEGO MA DUŻE ZNACZENIE. PONADTO DOBRZE ODNAJDUJĘ SIĘ W ZESPOLE I LUBIĘ PRACE NAD ZŁOŻONYMI PROJEKTAMI.
                   </p>
                   <p><a href="#aboutMe" class="btn btn-primary">See More <i class="fa fa-check" aria-hidden="true"></i> </a></p>      
                 </div>
@@ -67,7 +67,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
-            <h2>Doświadczenie</h2>
+            <h2>DOŚWIADCZENIE ZAWODOWE</h2>
             <div class="col-lg-12 experience">
               <p> 
                  <h4>08.2017 - 02.2018 INFORMATYK - PEC SP. Z 0.0. OŚWIĘCIM</h4>
@@ -108,7 +108,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
-            <h2>Wykształcenie</h2>
+            <h2>WYKSZTAŁCENIE</h2>
             <div class="col-lg-12 experience">
               <p> 
                 <h4>2015 - OBECNIE STUDIA INŻYNIERSKIE: INFORMATYKA</h4>
@@ -142,7 +142,7 @@
         <div class="row">
           <div class="col-lg-12">
             <div class="col-lg-6">
-              <h2>Umiejętności</h2>
+              <h2>UMIEJĘTNOŚCI</h2>
               <ul class="list-group">
                 <li class="list-group-item">JAVA</li>
                 <li class="list-group-item">ANDROID</li>
@@ -159,7 +159,7 @@
               </ul>
             </div>
             <div class="col-lg-6">
-              <h2>Atuty</h2>
+              <h2>ATUTY</h2>
              <ul class="list-group">
               <li class="list-group-item">PRACOWITOŚĆ</li>
               <li class="list-group-item">LOJALNOŚĆ</li>
@@ -175,7 +175,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
-            <h2>Projekty</h2>
+            <h2>PROJEKTY</h2>
           </div>
         </div>
         <div class="row">
