--- a/index.html
+++ b/index.html
@@ -241,9 +241,9 @@
     <section id="contact" class="section"> 
       <div class="container">
         <div class="row" id="contact-elements">
-            <div class="col-lg-3 col-lg-offset-1 contact-element"><a href="mailto:jakkoz91@gmail.com"><i class="fas fa-at ico"></i><br> jakkoz91@gmail.com</a></div>
-            <div class="col-lg-3 col-lg-offset-1 contact-element"><a href="https://www.linkedin.com/in/jakub-koz"><i class="fab fa-linkedin ico"></i><br>www.linkedin.com/in/jakub-koz</a> </div>
-            <div class="col-lg-3 col-lg-offset-1 contact-element"><a href="https://github.com/Qboons"><i class="fab fa-github-square ico"></i><br>github.com/Qboons</a> </div>
+          <a href="mailto:jakkoz91@gmail.com"><div class="col-lg-3 contact-element"><i class="fas fa-at ico"></i><br> jakkoz91@gmail.com</div></a>
+          <a href="https://www.linkedin.com/in/jakub-koz"><div class="col-lg-3 col-lg-offset-1 contact-element"><i class="fab fa-linkedin ico"></i><br>www.linkedin.com/in/jakub-koz</div></a>
+          <a href="https://github.com/Qboons"><div class="col-lg-3 col-lg-offset-1 contact-element"><i class="fab fa-github-square ico"></i><br>github.com/Qboons</div></a>
         </div>      
       </div>
     </section>
