--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                   <p>
                     JESTEM OSOBĄ DĄŻĄCĄ DO NIEUSTANNEGO POSZERZANIA SWOJEJ WIEDZY, DLATEGO NIE ZAMYKAM SIĘ NA ŻADNE TECHNOLOGIE I STANOWISKA, CO W OBSZARZE SZYBKO ZMIENIAJĄCYCH SIĘ NARZĘDZI INFORMATYCZNYCH I BARDZO KONKURENCYJNEGO OTOCZENIA BIZNESOWEGO MA DUŻE ZNACZENIE. PONADTO DOBRZE ODNAJDUJĘ SIĘ W ZESPOLE I LUBIĘ PRACE NAD ZŁOŻONYMI PROJEKTAMI.
                   </p>
-                  <p><a href="#aboutMe" class="btn btn-primary">See More <i class="fa fa-check" aria-hidden="true"></i> </a></p>      
+                  <!-- <p><a href="#aboutMe" class="btn btn-primary">See More <i class="fa fa-check" aria-hidden="true"></i> </a></p>       -->
                 </div>
           </div>
       </div>
@@ -241,9 +241,9 @@
     <section id="contact" class="section"> 
       <div class="container">
         <div class="row" id="contact-elements">
-          <a href="mailto:jakkoz91@gmail.com"><div class="col-lg-3 contact-element"><i class="fas fa-at ico"></i><br> jakkoz91@gmail.com</div></a>
-          <a href="https://www.linkedin.com/in/jakub-koz"><div class="col-lg-3 col-lg-offset-1 contact-element"><i class="fab fa-linkedin ico"></i><br>www.linkedin.com/in/jakub-koz</div></a>
-          <a href="https://github.com/Qboons"><div class="col-lg-3 col-lg-offset-1 contact-element"><i class="fab fa-github-square ico"></i><br>github.com/Qboons</div></a>
+          <a href="mailto:jakkoz91@gmail.com"><div class="col-lg-3 col-md-4 contact-element"><i class="fas fa-at ico"></i><br> jakkoz91@gmail.com</div></a>
+          <a href="https://www.linkedin.com/in/jakub-koz"><div class="col-lg-3 col-md-4 col-lg-offset-1 contact-element"><i class="fab fa-linkedin ico"></i><br>www.linkedin.com/in/jakub-koz</div></a>
+          <a href="https://github.com/Qboons"><div class="col-lg-3 col-md-4 col-lg-offset-1 contact-element"><i class="fab fa-github-square ico"></i><br>github.com/Qboons</div></a>
         </div>      
       </div>
     </section>
