--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               <li><a href="#aboutMe">O MNIE</a></li>
               <li><a href="#work">DOŚWIADCZENIE</a></li>
               <li><a href="#school">WYKSZTAŁCENIE</a></li>
-              <li><a href="#skills">UMIEJĘTNOŚI</a></li>
+              <li><a href="#skills">UMIEJĘTNOŚCI</a></li>
               <li><a href="#projects">PROJEKTY</a></li>
               <li><a href="#contact">KONTAKT</a></li>
             </ul>
