img hero, style changes

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <div class="jumbotron d-flex align-items-center" id="home">
         <div class="container">
               <h1 class="display-4 jumbo-caption">JAKUB KOZIEŁ</h1>
-              <p class="lead jumbo-caption">PORTFOLIO WZGLĘDNIE MŁODEGO ENTUZJASTY PROGRAMOWANIA</p>
+              <p class="lead jumbo-caption">{PORTFOLIO WZGLĘDNIE MŁODEGO ENTUZJASTY PROGRAMOWANIA}</p>
 
         </div>
       </div>
@@ -52,16 +52,15 @@
     <section id="aboutMe" class="section">
       <div class="container">       
           <div class="row " id="about-card">
-              <div class="col-sm-12  col-lg-4 img-header">
-                
+              <div class="col-xs-12 col-sm-12 col-md-8 col-lg-6 " id="img-header">
                   <img class="img-fluid" id="img-self" src="img/self.jpg" alt="">
-                  <div class="text-left caption">
-                    <p>IMIE: JAKUB</p>
+                  <div class="carousel-caption">
+                    <p >IMIE: JAKUB</p>
                     <p>NAZWISKO: KOZIEŁ</p>
                     <p>ROK URODZENIA: 1991</p>
                   </div>
                 </div>
-                <div class="col-sm-12  col-lg-8">
+                <div class="col-sm-12  col-lg-6">
                    <p>
                     JESTEM STUDENTEM PAŃSTWOWEJ WYŻSZEJ SZKOŁY ZAWODOWEJ W OŚWIĘCIMIU  NA KIERUNKU INFORMATYKA. INTERESUJĘ SIĘ PROGRAMOWANIEM, A SWOJĄ NAUKĘ ZACZĄŁEM OD JĘZYKA C/C++ JEDNAK  AKTUALNIE SKUPIAM SIĘ NA POSZERZANIU SWOICH UMIEJĘTNOŚCI W JĘZYKU JAVA, W KTÓRYM ZREALIZOWAŁEM PROJEKT SYSTEMU ZARZĄDZANIA ZASOBAMI LUDZKIMI W DWÓCH WERSJACH – PRZY UŻYCIU SERWLETÓW ORAZ FRAMEWORKU SPRING(+HIBERNATE). STARAM SIĘ RÓWNIEŻ ROZWIJAĆ W TECHNOLOGIACH WEBOWYCH (HTML, CSS, JS - REACT). INTERESUJĘ SIĘ TAKŻE OD NIEDAWNA PROJEKTOWANIEM APLIKACJI MOBILNYCH ANDROID. POSIADAM RÓWNIEŻ DOŚWIADCZENIE W PRACY Z TAKIMI NARZĘDZIAMI, JAK GIT, MAVEN ORAZ ZAJMOWAŁEM SIĘ PROJEKTOWANIEM RELACYJNYCH BAZ DANYCH (ORACLE). 
                   </p>
