padding in aboutMe section changed

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
           <p class="text-left">
             <a href="https://github.com/Qboons"><i class="fab fa-github-square contact-ico"></i>github.com/Qboons</a></p>
          </div>
-         <div class="col-lg-6">
+         <div class="col-lg-6" id="img-code">
             <img src="img/end.jpg" class="img-fluid" alt="">
         </div>
         </div>      
