--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
             </div>
          </div>
           <div class="col-sm-6 col-md-6 col-lg-4 project" >
-            <img class="img-fluid img-project" src="/img/rea.jpg">
+            <img class="img-fluid img-project" src="img/rea.jpg">
             <div class="carousel-caption">
                 <p class="text-">REAL ESTATE - FRONTEND (JAVASCRIPT/REACT)</p>
                   <button type="button" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#real-estate">
