--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         </div>
         <div class="row equal">
           <div class="col-sm-6 col-md-6 col-lg-4 project" >
-            <img class="img-fluid img-project" src="/img/hrs-s.jpg">
+            <img class="img-fluid img-project" src="img/hrs-s.jpg">
               <div class="carousel-caption">
                 <p>HR SYSTEM - SERVLETY (JEVA/JEE)</p>
                   <button type="button" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#hrs-s">
@@ -191,7 +191,7 @@
               </div>
          </div>
           <div class="col-sm-6 col-md-6 col-lg-4 project">
-            <img class="img-fluid img-project" src="/img/hrs-api.jpg">
+            <img class="img-fluid img-project" src="img/hrs-api.jpg">
             <div class="carousel-caption">
                 <p>HR SYSTEM - API</p>
                   <button type="button" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#hrs-api">
@@ -200,7 +200,7 @@
             </div>
          </div>
           <div class="col-sm-6 col-md-6 col-lg-4 project" >
-            <img class="img-fluid img-project" src="/img/btcapppng.png">
+            <img class="img-fluid img-project" src="img/btcapppng.png">
             <div class="carousel-caption">
                 <p>CRYPTOCURRENCY APP</p>
                   <button type="button" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#cc-app">
@@ -219,7 +219,7 @@
          </div>
         
          <div class="col-sm-6 col-md-6 col-lg-4 project" >
-            <img class="img-fluid img-project" src="/img/qm.jpg">
+            <img class="img-fluid img-project" src="img/qm.jpg">
             <div class="carousel-caption">
                 <p>QUOTE MACHINE</p>
                   <button type="button" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#quote-machine">
@@ -228,7 +228,7 @@
             </div>
          </div>
          <div class="col-sm-6 col-md-6 col-lg-4 project" >
-            <img class="img-fluid img-project" src="/img/prj-logo.png">
+            <img class="img-fluid img-project" src="img/prj-logo.png">
             <div class="carousel-caption">
                 <p>PROJEKT LOGO</p>
                   <button type="button" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#logo">
