--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </div>
     </nav>
     <header >
-      <div class="jumbotron d-flex align-items-center" id="home">
+      <div class="jumbotron d-flex align-items-baseline align-items-sm-center" id="home">
         <div class="container">
               <h1 class="display-4 jumbo-caption">JAKUB KOZIEŁ</h1>
               <p class="lead jumbo-caption">{PORTFOLIO WZGLĘDNIE MŁODEGO ENTUZJASTY PROGRAMOWANIA}</p>
@@ -369,7 +369,7 @@
           <div class="modal-body"> 
             <p>LOGO FIRMY SZYJĄCEJ UBRANIA</p>
             <p>UŻYTE TECHNOLOGIE: INKSCAPE</p>
-            <img  class="img-fluid" src="/img/prj-logo.png" alt="">
+            <img  class="img-fluid" src="img/prj-logo.png" alt="">
           <div class="modal-footer"><button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fas fa-times"></i></button></div>
         </div>
       </div>
