--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </nav>
     <header >
       <div class="jumbotron d-flex align-items-baseline align-items-sm-center" id="home">
-        <div class="container">
+        <div class="container" id="hero-text">
               <h1 class="display-4 jumbo-caption">JAKUB KOZIEŁ</h1>
               <p class="lead jumbo-caption">{PORTFOLIO WZGLĘDNIE MŁODEGO ENTUZJASTY PROGRAMOWANIA}</p>
 
