--- a/index.html
+++ b/index.html
@@ -252,13 +252,13 @@
               :)
           </p>
           <p class="text-left">
-            <a href="mailto:jakkoz91@gmail.com"><i class="fas fa-at contact-ico"></i>jakkoz91@gmail.com</a>
+            <a href="mailto:jakkoz91@gmail.com"><i class="fas fa-at contact-ico"></i> jakkoz91@gmail.com</a>
           </p>  
           <p class="text-left">
-            <a href="https://www.linkedin.com/in/jakub-koz"><i class="fab fa-linkedin contact-ico"></i>www.linkedin.com/in/jakub-koz</a>
+            <a href="https://www.linkedin.com/in/jakub-koz"><i class="fab fa-linkedin contact-ico"></i> linkedin.com/in/jakub-koz</a>
           </p>
           <p class="text-left">
-            <a href="https://github.com/Qboons"><i class="fab fa-github-square contact-ico"></i>github.com/Qboons</a></p>
+            <a href="https://github.com/Qboons"><i class="fab fa-github-square contact-ico"></i> github.com/Qboons</a></p>
          </div>
          <div class="col-lg-6" id="img-code">
             <img src="img/end.jpg" class="img-fluid" alt="">
@@ -269,13 +269,10 @@
     <footer>
       <div class="container">
           <div class="row" >
-            <div class="col-lg-4">
-              
-            </div>
             <div class="col-lg-4" >
             </div>
             <div class="col-lg-4" id="footer-contact">
-                <p class="text-right">Kontak:
+                <p class="text-right">
                     <a href="mailto:jakkoz91@gmail.com"><i class="fas fa-at footer-ico"></i></a>  
                     <a href="https://www.linkedin.com/in/jakub-koz"><i class="fab fa-linkedin footer-ico"></i></a>    
                     <a href="https://github.com/Qboons"><i class="fab fa-github-square footer-ico"></i></a>
