--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+    <link rel="shortcut icon" type="image/png" href="img/jklogo.png"/>
 
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
@@ -23,7 +24,7 @@
   </head>
   <body>
     <nav class="navbar  navbar-dark fixed-top" id="navigation-bar">
-          <a class="navbar-brand" href="#home">JK</a>
+          <a class="navbar-brand" href="#home"><img src="img/jklogotrans.png" alt="" style="height: 40px; width: 40px;"></a>
           <div class="navbar navbar-expand-lg justify-content-end">
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
@@ -249,7 +250,6 @@
          <div class="col-lg-6 " id="contact-elements">
           <p class="text-left" >
               JEŚLI ZAINTERESOWAŁEM PAŃSTWA SWOJĄ OSOBĄ PROSZĘ O KONTAKT
-              :)
           </p>
           <p class="text-left">
             <a href="mailto:jakkoz91@gmail.com"><i class="fas fa-at contact-ico"></i> jakkoz91@gmail.com</a>
@@ -269,10 +269,14 @@
     <footer>
       <div class="container">
           <div class="row" >
-            <div class="col-lg-4" >
+            <div class="col-lg-6" >
+                <p class="text-center">
+                    <a  href="#home"><img src="img/jklogotrans.png" alt="" style="height: 40px; width: 40px;"></a>
+                </p>
+                
             </div>
-            <div class="col-lg-4" id="footer-contact">
-                <p class="text-right">
+            <div class="col-lg-6" id="footer-contact">
+                <p class="text-center">
                     <a href="mailto:jakkoz91@gmail.com"><i class="fas fa-at footer-ico"></i></a>  
                     <a href="https://www.linkedin.com/in/jakub-koz" target="_blank"><i class="fab fa-linkedin footer-ico"></i></a>    
                     <a href="https://github.com/Qboons" target="_blank"><i class="fab fa-github-square footer-ico"></i></a>
