--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
   </head>
   <body>
     <nav class="navbar  navbar-dark fixed-top" id="navigation-bar">
-          <a class="navbar-brand" href="#home"><img src="img/jklogotrans.png" alt="" style="height: 40px; width: 40px;"></a>
-          <div class="navbar navbar-expand-lg justify-content-end">
+          <a class="navbar-brand" href="#home"><img src="img/jklogotrans.png" alt="" style="height: 30px; width: 30px;"></a>
+          <!-- <div class="navbar navbar-expand-lg justify-content-end"> -->
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
@@ -40,6 +40,7 @@
                     <li class="nav-item"><a class="nav-link" href="#contact" data-toggle="collapse" data-target=".navbar-collapse.show">KONTAKT</a></li>
                   </ul>
                 </div>
+                <!-- </div> -->
     </nav>
     <header >
       <div class="jumbotron d-flex align-items-baseline align-items-sm-center" id="home">
@@ -56,7 +57,7 @@
               <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6 " id="img-header">
                   <img class="img-fluid" id="img-self" src="img/self.jpg" alt="">
                   <div class="carousel-caption">
-                    <p >IMIE: JAKUB</p>
+                    <p >IMIĘ: JAKUB</p>
                     <p>NAZWISKO: KOZIEŁ</p>
                     <p>ROK URODZENIA: 1991</p>
                   </div>
@@ -66,7 +67,7 @@
                     JESTEM STUDENTEM PAŃSTWOWEJ WYŻSZEJ SZKOŁY ZAWODOWEJ W OŚWIĘCIMIU  NA KIERUNKU INFORMATYKA. INTERESUJĘ SIĘ PROGRAMOWANIEM, A SWOJĄ NAUKĘ ZACZĄŁEM OD JĘZYKA C/C++ JEDNAK  AKTUALNIE SKUPIAM SIĘ NA POSZERZANIU SWOICH UMIEJĘTNOŚCI W JĘZYKU JAVA, W KTÓRYM ZREALIZOWAŁEM PROJEKT SYSTEMU ZARZĄDZANIA ZASOBAMI LUDZKIMI W DWÓCH WERSJACH – PRZY UŻYCIU SERWLETÓW ORAZ FRAMEWORKU SPRING(+HIBERNATE). STARAM SIĘ RÓWNIEŻ ROZWIJAĆ W TECHNOLOGIACH WEBOWYCH (HTML, CSS, JS - REACT). INTERESUJĘ SIĘ TAKŻE OD NIEDAWNA PROJEKTOWANIEM APLIKACJI MOBILNYCH ANDROID. POSIADAM RÓWNIEŻ DOŚWIADCZENIE W PRACY Z TAKIMI NARZĘDZIAMI, JAK GIT, MAVEN ORAZ ZAJMOWAŁEM SIĘ PROJEKTOWANIEM RELACYJNYCH BAZ DANYCH (ORACLE). 
                   </p>
                   <p>
-                    JESTEM OSOBĄ DĄŻĄCĄ DO NIEUSTANNEGO POSZERZANIA SWOJEJ WIEDZY, DLATEGO NIE ZAMYKAM SIĘ NA ŻADNE TECHNOLOGIE I STANOWISKA, CO W OBSZARZE SZYBKO ZMIENIAJĄCYCH SIĘ NARZĘDZI INFORMATYCZNYCH I BARDZO KONKURENCYJNEGO OTOCZENIA BIZNESOWEGO MA DUŻE ZNACZENIE. PONADTO DOBRZE ODNAJDUJĘ SIĘ W ZESPOLE I LUBIĘ PRACE NAD ZŁOŻONYMI PROJEKTAMI.
+                    JESTEM OSOBĄ DĄŻĄCĄ DO NIEUSTANNEGO POSZERZANIA SWOJEJ WIEDZY, DLATEGO NIE ZAMYKAM SIĘ NA ŻADNE TECHNOLOGIE I STANOWISKA, CO W OBSZARZE SZYBKO ZMIENIAJĄCYCH SIĘ NARZĘDZI INFORMATYCZNYCH I BARDZO KONKURENCYJNEGO OTOCZENIA BIZNESOWEGO MA DUŻE ZNACZENIE. PONADTO DOBRZE ODNAJDUJĘ SIĘ W ZESPOLE I LUBIĘ PRACĘ NAD ZŁOŻONYMI PROJEKTAMI.
                   </p>
                 </div>
           </div>
@@ -97,10 +98,10 @@
                 <h5>06.2015-11.2016 PRACOWNIK BIUROWY-MIX-BUD  SP. Z 0.0 </h5>
                  <ul>
                    <li>ORGANIZOWANIE BIURA</li>
-                   <li>KONTAKTOWANIE SIE Z KONTRAHENTAMI KLIENTAMI ORAZPRACOWNIKAMI</li>
+                   <li>KONTAKTOWANIE SIE Z KONTRAHENTAMI KLIENTAMI ORAZ PRACOWNIKAMI</li>
                    <li>KOMPLETOWANIE DOKUMENTÓW</li>
                    <li>WYSTAWIANIE FAKTUR</li>
-                   <li>TWORZENIE KOSZORYSÓW</li>
+                   <li>TWORZENIE KOSZTORYSÓW</li>
                  </ul>
             </div>
             <div class="col-lg-12">
