--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </head>
   <body>
     <nav class="navbar  navbar-dark fixed-top" id="navigation-bar">
-          <a class="navbar-brand" href="#home"><img src="img/jklogotrans.png" alt="" style="height: 30px; width: 30px;"></a>
+          <a class="navbar-brand" href="#home" id="logo"><img src="img/jklogotrans.png" alt="" style="height: 30px; width: 30px;"></a>
           <!-- <div class="navbar navbar-expand-lg justify-content-end"> -->
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
@@ -272,7 +272,7 @@
           <div class="row" >
             <div class="col-lg-6" >
                 <p class="text-center">
-                    <a  href="#home"><img src="img/jklogotrans.png" alt="" style="height: 40px; width: 40px;"></a>
+                    <a  href="#home" id="logo"><img src="img/jklogotrans.png" alt="" style="height: 40px; width: 40px;"></a>
                 </p>
                 
             </div>
@@ -389,12 +389,13 @@
           $('#myInput').trigger('focus')
         });
 
-        $('nav li a').on('click',function(event){
+        $('nav li a, #logo').on('click',function(event){
           event.preventDefault();
           var target = $(this).attr('href');
           var offsetTop = $(target).offset().top;
           $('html, body').animate({scrollTop:offsetTop}, 1000);
         });
+        
       </script> 
   </body>
 </html>
